[package]
name = "kv-store"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1.0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
warp = "0.3.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "io-util"] }
hyper = "0.14"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
