[package]
name = "kv-store"
version = "0.1.0"
edition = "2018"
description = "A key-value store exposed via a web server and a cli."
authors = ["Sanskar Jaiswal <jaiswalsanskar078@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1.0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
log = "0.4"
anyhow = "1.0.44"
nats = "0.15.2"
